tests/sksl/errors/OverflowInlinedLiteral.glsl
### Compilation failed:

error: 20: integer is out of range for type 'short': 99999
error: 21: integer is out of range for type 'short': 67890
error: 22: integer is out of range for type 'int': 5000000000
error: 23: integer is out of range for type 'int': 3000000000
error: 24: integer is out of range for type 'short': 32768
error: 25: integer is out of range for type 'int': 2147483648
6 errors
